# Wife001

./: .env.prod  README.md  pyproject.toml
Wife001/plugins/praise/: __init__.py
Wife001/plugins/remind/: __init__.py  config.py
